--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "AvantGarde N", sans-serif;
+  font-family: "Roboto Light", sans-serif;
 }
 
 h1, p {
@@ -112,9 +112,8 @@ header .navbar {
 
 .navbar-container {
   background: rgba(255, 255, 255, 0.96); /* Transparenter Hintergrund */
-  border-bottom: 6px solid #222;
   border-left: 14px solid transparent;
-  border-right: 0px solid transparent;
+  border-right: 0 solid transparent;
   position: relative;
 }
 
@@ -145,11 +144,11 @@ header .navbar {
 }
 
 footer {
-  padding: 200px 60px 20px;
+  padding: 0px 60px 20px;
   text-align: center;
   color: white;
   position: relative;
-  margin-top: 40vh; /* Verschiebt den Footer nach unten, sodass er erst später sichtbar wird */
+  margin-top: 10vh; /* Verschiebt den Footer nach unten, sodass er erst später sichtbar wird */
 }
 
 .footer a {
@@ -168,13 +167,6 @@ footer-logo {
 
 h1 {
   margin-top: 10px;
-  color: #8B3238;
-}
-
-hbig {
-  font-size: 4rem;
-  color: #fff;
-  font-weight: 500;
 }
 
 .content-box {
@@ -346,7 +338,7 @@ hbig {
   text-align: left; /* Text links ausrichten */
   font-size: 20px;
   font-weight: 600;
-  transition: transform 0.2s ease; background-color: 0.3s ease;
+  transition: transform 0.2s ease;
 }
 
 .accordion-content {
@@ -512,7 +504,7 @@ hbig {
   position: relative;
   z-index: 1; /* Damit der Text über dem Bild liegt */
   color: white; /* Textfarbe nach Wunsch */
-  font-size: 4rem;
+  font-size: 5rem;
   margin-top: 20px;
 }
 
@@ -583,7 +575,7 @@ hbig {
   border-bottom-right-radius: 60px;
   border-bottom-left-radius: 6px;
   border-top-right-radius: 6px;
-  transition: transform 0.2s ease; background-color: 0.3s ease;
+  transition: transform 0.2s ease;
 }
 
 .accordion-content-ag {
@@ -634,51 +626,169 @@ hbig {
   font-size: 1rem;
 }
 
-.accordion-container-job {
-  width: 95%;
-  max-width: 1900px;
-  margin: 20px auto;
-  margin-left: 42px;
-  border-radius: 8px;
-  text-align: left;
-  background: rgba(255, 255, 255, 0.9);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  border-bottom-right-radius: 40px;
-  border-bottom-left-radius: 6px;
-  border-top-right-radius: 6px;
+.job-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr; /* 3 Spalten */
+  grid-template-rows: auto auto; /* Flexible Höhen */
+  gap: 0px;
+  max-width: 100%;
+  margin: auto;
 }
 
-.accordion-header-job {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  width: 100%;
-  padding-left: 15px;
-  padding: 20px;
-  font-size: 1.2rem;
-  background: var(--primary-color);
-  color: #222222;
-  text-align: left;
-  border: none;
+.job-box-large {
+  background: #501414;
+  padding: 60px; /* Gleiche Größe wie accordion-header-job */
+  margin-top: 0px;
+  border-radius: 0px;
+  box-shadow: 0  rgba(0, 0, 0, 0.1);
+  transition: background 0.3s, transform 0.2s;
+  color: #eddcdc;
+  font-size: 18px;
   cursor: pointer;
-  border-bottom-right-radius: 60px;
-  border-bottom-left-radius: 6px;
-  border-top-right-radius: 6px;
-  transition: transform 0.2s ease; background-color: 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
-.accordion-header-job:active {
-  transform: scale(1.02); /* Verkleinert den Button kurz beim Klicken */
-  background-color: #aa6161; /* Hellt den Button leicht auf */
+.job-box1 {
+  background: white;
+  aspect-ratio: 1 / 1;
+  padding: 80px; /* Gleiche Größe wie accordion-header-job */
+  margin-top: 0px;
+  border-radius: 0px;
+  box-shadow: 0  rgba(0, 0, 0, 0.1);
+  transition: background 0.3s, transform 0.2s;
+  color: #6e2323;
+  font-size: 18px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+/* Hover-Effekt */
+.job-box1:hover {
+  background: rgb(179, 149, 150);
+  color: white;
+  transform: scale(1); /* Leichte Vergrößerung */
 }
 
-.accordion-content-job {
-  display: none;
-  padding: 20px;
-  border-bottom-right-radius: 20px;
-  border-bottom-left-radius: 6px;
-  border-top-right-radius: 6px;
+.job-box2 {
+  background: #8b3238;
+  aspect-ratio: 1 / 1;
+  padding: 80px; /* Gleiche Größe wie accordion-header-job */
+  margin-top: 0px;
+  border-radius: 0px;
+  box-shadow: 0  rgba(0, 0, 0, 0.1);
+  transition: background 0.3s, transform 0.2s;
+  color: #ffffff;
+  font-size: 18px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
+
+.job-box2:hover {
+  background: rgb(80, 20, 20);
+  color: white;
+  transform: scale(1); /* Leichte Vergrößerung */
+}
+
+.job-box3 {
+  background: #b38c90;
+  aspect-ratio: 1 / 1;
+  padding: 80px; /* Gleiche Größe wie accordion-header-job */
+  margin-top: 0px;
+  border-radius: 0px;
+  box-shadow: 0  rgba(0, 0, 0, 0.1);
+  transition: background 0.3s, transform 0.2s;
+  color: #ffffff;
+  font-size: 18px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.job-box3:hover {
+  background: rgb(139, 50, 56);
+  color: white;
+  transform: scale(1); /* Leichte Vergrößerung */
+}
+
+.job-box4 {
+  background: rgba(60, 18, 18, 0.9);
+  aspect-ratio: 1 / 1;
+  padding: 80px; /* Gleiche Größe wie accordion-header-job */
+  margin-top: 0px;
+  border-radius: 0px;
+  box-shadow: 0  rgba(0, 0, 0, 0.1);
+  transition: background 0.3s, transform 0.2s;
+  color: #ffffff;
+  font-size: 18px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.job-box4:hover {
+  background: rgb(236, 223, 223);
+  color: #000000;
+  transform: scale(1); /* Leichte Vergrößerung */
+}
+
+/* Linke große Box */
+.large {
+  grid-row: span 2; /* 2 Reihen hoch */
+}
+
+/* Responsive Anpassung */
+@media (max-width: 800px) {
+  .job-grid {
+    grid-template-columns: 1fr; /* Einspaltiges Layout */
+  }
+
+  .large {
+    grid-row: auto;
+  }
+}
+
+.job-box-gut1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* 2 Spalten */
+  grid-gap: 20px; /* Abstand zwischen den Spalten */
+  background: #501414;
+  padding: 80px;
+  padding-left: 100px;
+  margin: 0px;
+  border-radius: 0px;
+  box-shadow: 0 rgba(0, 0, 0, 0.1);
+  transition: background 0.3s, transform 0.2s;
+  color: #eddcdc;
+  font-size: 18px;
+  cursor: pointer;
+  text-align: left;
+}
+
+.job-box-gut1 h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.job-box-gut1 .column {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
 
 .image-bar {
   display: flex;
@@ -788,7 +898,6 @@ hbig {
   margin: 0 auto;
 }
 
-
 .box-team-transparent {
   width: 600px;
   background: rgba(255, 255, 255, 0.8); /* Transparente weiße Box */
@@ -859,14 +968,34 @@ hbig {
 }
 
 .transparent-heading {
-  font-size: 2rem; /* Die gleiche Größe wie h1 oder anpassen, wie du möchtest */
+  font-size: 4rem; /* Die gleiche Größe wie h1 oder anpassen, wie du möchtest */
   font-weight: bold; /* Optional, je nach Bedarf */
-  color: rgba(255, 255, 255, 0.5); /* Transparent, aber sichtbar */
+  color: rgba(255, 255, 255, 0.8); /* Transparent, aber sichtbar */
   text-align: left; /* Links ausgerichtet */
-  padding-left: 13%; /* Abstand vom linken Rand */
+  padding-left: 100px; /* Abstand vom linken Rand */
   padding-top: 20px; /* Optionaler Abstand oben */
-  padding-bottom: 30px; /* Optionaler Abstand unten */
+  padding-bottom: 20px; /* Optionaler Abstand unten */
   letter-spacing: 1px; /* Optional, um den Abstand zwischen den Buchstaben zu vergrößern */
   margin: 0; /* Verhindert unnötige Ränder */
 }
 
+.transparent-heading2 {
+  font-size: 3rem; /* Die gleiche Größe wie h1 oder anpassen, wie du möchtest */
+  font-weight: bold; /* Optional, je nach Bedarf */
+  color: rgba(255, 255, 255, 0.7); /* Transparent, aber sichtbar */
+  text-align: center; /* Links ausgerichtet */
+  padding-left: 00px; /* Abstand vom linken Rand */
+  padding-top: 80px; /* Optionaler Abstand oben */
+  padding-bottom: 20px; /* Optionaler Abstand unten */
+  letter-spacing: 1px; /* Optional, um den Abstand zwischen den Buchstaben zu vergrößern */
+  margin: 0; /* Verhindert unnötige Ränder */
+}
+
+.aufgaben-box {
+  width: 1000px;
+  padding: 30px;
+  background: rgba(255, 255, 255, 0);
+  text-align: center;
+  position: relative;
+  margin: 40px auto 40px auto;
+}
