--- a/css/style.css
+++ b/css/style.css
@@ -628,8 +628,7 @@ hbig {
 
 .job-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr; /* 3 Spalten */
-  grid-template-rows: auto auto; /* Flexible Höhen */
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 0px;
   max-width: 100%;
   margin: auto;
